# cxx-lab

./: .gitignore  README.md  format-code.sh
.github/workflows/: format-check.yaml
asio-demo/: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  daytime_client.cc  daytime_server.cc  periodical_task.cc  simple_logger.h  string_helper.h  tcp_connection.h
asio-demo/include/: async_write_message.h  simple_logger.h  tcp_server.h
asio-demo/src/: async_write_client.cc  async_write_server.cc  connect_timeout.cc  daytime_client.cc  daytime_server.cc  multi_threads_run.cc  periodic_task.cc  tcp_e2e.cc  thread_pool.cc
coroutines/: noncopyable.h  resume_immediately_awaitable.h  resume_immediately_awaitable_demo.cc  tail_call.cc
modern-cpp/: README.md
modern-cpp/cpp17/: README.md
modern-cpp/cpp17/language/: attributes.cc  auto-braced-list.cc  auto-non-type-tmpl-param.cc  constexpr-lambda.cc  deduction-class.cc  folding-expressions.cc  lambda-capture-this-by-value.cc  structured-binding.cc
recipes/: safe_register.cc
recipes/duplicated-symbols/: .gitignore  CMakeLists.txt  README.md  build.sh  visibility.patch
recipes/duplicated-symbols/common/: common.cc  common.h
recipes/duplicated-symbols/common-v1/: CMakeLists.txt  common.cc
recipes/duplicated-symbols/example/: CMakeLists.txt  example.cc
recipes/duplicated-symbols/plugin1/: CMakeLists.txt  plugin1.cc  plugin1.h
recipes/duplicated-symbols/plugin2/: CMakeLists.txt  plugin2.cc  plugin2.h
recipes/duplicated-symbols/simplified/: build.sh  clean.sh  foo1.c  foo2.c  main.c
